sumo/tests/sumo/errors/network/edge/cedge/root__edge__cedge#id__empty1/errors.sumo
Error: Trying to reference an unknown edge ('') in edge '1'.
Quitting (on error).
